fix:align itens in midia

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -307,16 +307,19 @@ section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px solid white;
   }
 
   .content-name{
-}
-  
-  .content-nav{
-  display: flex;
+    border: 1px solid white;
+  }
+
+  .content-nav{ 
   justify-content: center;
   align-items: center;
+  margin-left: 70px;
   gap: 15px;
+  border: 1px solid white;
 } 
 
   main{
@@ -336,10 +339,12 @@ section{
 
 .content-img{
   display: flex;
-align-items: center;
+  align-items: center;
+  justify-content: center;
   width: 1px; 
   gap: 30px;
   margin-top: 60px;
+  margin-left: -40px;
 }
   .content-button{
   display: flex;
@@ -360,6 +365,7 @@ a:hover{
 }
 section{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   color: white;
 }
@@ -370,4 +376,22 @@ section{
   justify-content: center;
   align-items: center;
 }
+
+.content-button{
+  margin-left: -25px;
+
+}
+
+.content-midias{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -25px;
+}
+
+.alinhamento-section > img{
+  margin-left: -225px;
+  margin-top: -35px;
+}
+
 }
